<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_explore"
        android:title="@string/explore"
        android:icon="@drawable/ic_explore"
        app:showAsAction="ifRoom"/>

    <item
        android:title=""
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_activity"
        android:title="@string/activity"
        android:icon="@drawable/ic_like"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_account"
        android:title="@string/account"
        android:icon="@drawable/ic_account_circle"
        app:showAsAction="ifRoom"/>

</menu>