<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="?attr/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/search_result_user_image"
        android:layout_width="@dimen/touch_area_width"
        android:layout_height="@dimen/touch_area_height"
        android:src="@drawable/ic_account"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/touch_area_height"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/search_result_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@android:color/white"
            android:fontFamily="@font/inter_bold"
            android:textSize="@dimen/text_small"
            android:includeFontPadding="false"
            android:drawablePadding="4dp"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/search_result_user_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/white"
            android:fontFamily="@font/inter_bold"
            android:textSize="12sp"
            android:ellipsize="end"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search_user_follow"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/touch_area_height"
        app:backgroundTint="?attr/colorSecondary"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:text="@string/follow"
        android:textAllCaps="false"/>
</LinearLayout>