<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:paddingBottom="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/touch_area_height"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/publisher_dp"
            android:layout_width="@dimen/touch_area_width"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_account"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/post_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:fontFamily="@font/inter_bold"
            android:padding="8dp"
            android:textSize="@dimen/text_small"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_toEndOf="@id/publisher_dp"
            android:drawablePadding="4dp"
            android:ellipsize="end"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/options_menu_post"
            android:layout_width="@dimen/touch_area_width"
            android:layout_height="@dimen/touch_area_height"
            android:src="@drawable/ic_more"
            app:tint="@color/white"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/username"
            android:scaleType="fitXY"
            android:layout_alignParentEnd="true"
            android:visibility="gone"/>


    </RelativeLayout>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/background_line"/>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_post_default"
            android:contentDescription="@string/post"/>

        <ImageView
            android:id="@+id/double_tap_like_icon_middle"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:src="@drawable/ic_like_filled"
            android:visibility="gone"
            android:layout_gravity="center"
            android:contentDescription="@string/like" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_gravity="bottom">
            <ImageView
                android:id="@+id/post_like"
                android:layout_width="@dimen/touch_area_width"
                android:layout_height="@dimen/touch_area_height"
                android:src="@drawable/ic_like"
                android:padding="10dp"
                android:contentDescription="@string/like" />
            <ImageView
                android:id="@+id/post_share"
                android:layout_width="@dimen/touch_area_width"
                android:layout_height="@dimen/touch_area_height"
                android:src="@drawable/ic_send"
                android:rotation="20"
                android:padding="4dp"
                android:contentDescription="@string/share" />

    </LinearLayout>

    <TextView
        android:id="@+id/post_likes_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Likes"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:visibility="visible"
        android:textSize="12sp"
        android:fontFamily="@font/inter_bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp">
        <TextView
            android:id="@+id/post_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/post_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="2"/>
    </LinearLayout>
</LinearLayout>